// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`branch-create-handler for release pull request generation Bails if there is no milestone for the given release branch 1`] = `
Array [
  Object {
    "base": "trunk",
    "body": "This is the release pull request for WooCommerce Blocks plugin 4.2.1.

## Communication

>  This section is for any notes related to communicating the release Please include any extra details with each item as needed.


This release introduces:


> In this section document an overview/summary of what this release includes. You can refer to the changelog for more information


### Changelog

> Changelog Error: Changelog could not be generated because there is no milestone for the release branch that was pushed. Double-check the spelling on the release branch and ensure that you have a milestone corresponding to the version in the branch name. If you found the error, you can restart by deleting the branch and this pull and pushing a new branch.
> You'll need to edit this section manually

### Prepared Updates

The following documentation, blog posts, and changelog updates are prepared for the release:


> In this section you are highlighting all the public facing documentation that is related to the release. Feel free to remove anything that doesn't apply for this release.


**Release announcement:** *Link to release announcement post on developer.woocommerce.com (published after release)*

**Developer Notes** - The following issues require developer notes in the release post:

> Devnotes Error: Changelog could not be generated because there is no milestone for the release branch that was pushed. Double-check the spelling on the release branch and ensure that you have a milestone corresponding to the version in the branch name. If you found the error, you can restart by deleting the branch and this pull and pushing a new branch.
> PRs tagged for dev notes cannot be found, you'll need to edit this section manually.


**Relevant developer documentation:**
_Link(s) to any developer documentation related to the release_

**Happiness Engineer:**
_Link to any special instructions or helpful notes for HE related to this release_

* [ ] The release includes a changelog entry in the readme.txt?


## Quality

> This section is for any notes related to quality around the release Please include any extra details with each item as needed. This can include notes about why something isn't checked or expanding info on your response to an item.

**For testing:**

* [ ] Changes in this release are covered by Automated Tests.

      > This section is for confirming that the release changeset is covered by automated tests. If not, please leave some details on why not and any relevant information indicating confidence without those tests.

     * [ ] Unit tests
     * [ ] E2E tests
     * [ ] for each supported WordPress and WooCommerce core versions.

* This release has been tested on the following platforms:
     * [ ] mobile
     * [ ] desktop

* [ ] This release affects public facing REST APIs.
    * [ ] It conforms to REST API versioning policy.

* [ ] This release impacts **other extensions** or **backward compatibility**.
    * [ ] The release changes the signature of public methods or functions
        * [ ] This is documented (see: *Enter a link to the documentation here*)
    * [ ] The release affects filters or action hooks.
        * [ ] This is documented (see: *Enter a link to the documentation here*)

* [ ] Link to **testing instructions** for this release: *Enter a link to the testing instructions here, ideally in /docs/testing/releases*

* [ ] The release has a negative performance impact on sites.
    * [ ] There are new assets (JavaScript or CSS bundles)
    * [ ] There is an increase to the size of JavaScrip or CSS bundles) *please include rationale for this increase*
    * [ ] Other negative performance impacts (if yes, include list below)

* [ ] The release has positive performance impact on sites. If checked, please document these improvements here.

## Additional Notes

> This section is for additional notes related to the release.

------



###### :rocket: This pull request was generated by the [automations bot](https://github.com/woocommerce/automations) triggered by the creation of the branch: \`release/4.2.1\`. cc @Codertocat
",
    "head": "release/4.2.1",
    "owner": "nerrad",
    "repo": "tests",
    "title": "Release: 4.2.1",
  },
]
`;

exports[`branch-create-handler for release pull request generation Bails if there is no milestone for the given release branch 2`] = `
Array [
  Object {
    "body": "The release pull request has been created! This checklist is a guide to follow for the remainder of the release process. You can check off each item in this list once completed.

## Checklist

* [ ] Add changelog to readme.txt (you can get the generated changelog from the pull request description).
* [ ] Create testing notes and generate zip for testing with.
* [ ] Review checklist and add any necessary comments in the main description for the pull request.
* [ ] Build and commit GitHub tag for 4.2.1 (once pull request is approved).



###### :rocket: This comment was generated by the [automations bot](https://github.com/woocommerce/automations) triggered by the creation of the branch: \`release/4.2.1\`. cc @Codertocat
",
    "issue_number": 1235,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;

exports[`branch-create-handler for release pull request generation creates a pull request with changelog 1`] = `
Array [
  Object {
    "base": "trunk",
    "body": "This is the release pull request for WooCommerce Blocks plugin 3.0.0.

## Communication

>  This section is for any notes related to communicating the release Please include any extra details with each item as needed.


This release introduces:


> In this section document an overview/summary of what this release includes. You can refer to the changelog for more information


### Changelog

#### Various

- Found a bug. ([1347](https://github.com/octocat/Hello-World/issues/1347))
- Fixed an item and this should be the changelog entry. ([1348](https://github.com/octocat/Hello-World/issues/1348))



### Prepared Updates

The following documentation, blog posts, and changelog updates are prepared for the release:


> In this section you are highlighting all the public facing documentation that is related to the release. Feel free to remove anything that doesn't apply for this release.


**Release announcement:** *Link to release announcement post on developer.woocommerce.com (published after release)*



**Relevant developer documentation:**
_Link(s) to any developer documentation related to the release_

**Happiness Engineer:**
_Link to any special instructions or helpful notes for HE related to this release_

* [ ] The release includes a changelog entry in the readme.txt?


## Quality


> This section is for any notes related to quality around the release Please include any extra details with each item as needed. This can include notes about why something isn't checked or expanding info on your response to an item.



**For testing:**

* [ ] Changes in this release are covered by Automated Tests.

      > This section is for confirming that the release changeset is covered by automated tests. If not, please leave some details on why not and any relevant information indicating confidence without those tests.

     * [ ] Unit tests
     * [ ] E2E tests
     * [ ] for each supported WordPress and WooCommerce core versions.

* This release has been tested on the following platforms:
     * [ ] mobile
     * [ ] desktop

* [ ] This release affects public facing REST APIs.
    * [ ] It conforms to REST API versioning policy.

* [ ] This release impacts **other extensions** or **backward compatibility**.
    * [ ] The release changes the signature of public methods or functions
        * [ ] This is documented (see: *Enter a link to the documentation here*)
    * [ ] The release affects filters or action hooks.
        * [ ] This is documented (see: *Enter a link to the documentation here*)

* [ ] Link to **testing instructions** for this release: *Enter a link to the testing instructions here, ideally in /docs/testing/releases*

* [ ] The release has a negative performance impact on sites.
    * [ ] There are new assets (JavaScript or CSS bundles)
    * [ ] There is an increase to the size of JavaScrip or CSS bundles) *please include rationale for this increase*
    * [ ] Other negative performance impacts (if yes, include list below)

* [ ] The release has positive performance impact on sites. If checked, please document these improvements here.

## Additional Notes

> This section is for additional notes related to the release.

------



###### :rocket: This pull request was generated by the [automations bot](https://github.com/woocommerce/automations) triggered by the creation of the branch: \`release/3.0\`. cc @Codertocat
",
    "head": "release/3.0",
    "owner": "nerrad",
    "repo": "tests",
    "title": "Release: 3.0.0",
  },
]
`;

exports[`branch-create-handler for release pull request generation creates a pull request with changelog 2`] = `
Array [
  Object {
    "body": "The release pull request has been created! This checklist is a guide to follow for the remainder of the release process. You can check off each item in this list once completed.

## Checklist

* [ ] Add changelog to readme.txt (you can get the generated changelog from the pull request description).
* [ ] Create testing notes and generate zip for testing with.
* [ ] Review checklist and add any necessary comments in the main description for the pull request.
* [ ] Build and commit GitHub tag for 3.0.0 (once pull request is approved).



###### :rocket: This comment was generated by the [automations bot](https://github.com/woocommerce/automations) triggered by the creation of the branch: \`release/3.0\`. cc @Codertocat
",
    "issue_number": 1235,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;
